fix PNG team logos being squished

--- a/assets/styles/teamList.scss
+++ b/assets/styles/teamList.scss
@@ -2,4 +2,5 @@
   height: 100px;
   max-width: 130px;
   display: block;
+  object-fit: contain;
 }
