--- a/assets/styles/teamShow.scss
+++ b/assets/styles/teamShow.scss
@@ -4,6 +4,7 @@
 .team-logo-big {
     height: 200px;
     max-width: 260px;
+    object-fit: contain;
 }
 .team-flag {
     height: 32px;
@@ -21,6 +22,7 @@
     height: 100px;
     max-width: 130px;
     display: block;
+    object-fit: contain;
 }
 .leagueTeam-seasons {
     font-size: 12px;
